Linked List 11/03